--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Cardo&family=Grey+Qo&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');
-/* font-family: 'Cardo', serif;
-font-family: 'Grey Qo', cursive; */
-/* font-family: 'Italiana', serif; */
+/* font-family: 'Grey Qo', cursive; */ 
+
 
 * {
     margin: 0;
@@ -19,7 +18,6 @@ font-family: 'Grey Qo', cursive; */
 
 body {
   background-color: var(--white);
-  font-family: 'Cardo', serif;
 }
 
 a {
@@ -235,4 +233,39 @@ h2{
         font-size: 60px;
         margin-top: -480px;
     }
+}
+
+.bio-container{
+    text-align: center;
+    align-items: center;
+    margin-top: 50px;
+    margin-left: 40px;
+    margin-right: 40px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.h2-bio-title{
+    margin-top: 30px;
+}
+
+.hr-line{
+    width: 90px;
+    height: 3px;  
+    background-color: black
+}
+
+.black{
+    color:var(--black)
+}
+
+.bio-h3{
+    font-size: 25px;
+    font-style: italic;
+}
+
+.bio-h4{
+    color: var(--black);
+    font-size: 17px;
 }
