--- a/style.css
+++ b/style.css
@@ -223,18 +223,6 @@ h2{
     padding-top: 30px;
 }
 
-@media screen and (min-width: 780px) {
-
-    
-    .imginicio-container {
-        height: 685px;
-    }
-    .title-container{
-        font-size: 60px;
-        margin-top: -480px;
-    }
-}
-
 .bio-container{
     text-align: center;
     align-items: center;
@@ -244,10 +232,6 @@ h2{
     display: flex;
     flex-direction: column;
     gap: 30px;
-}
-
-.h2-bio-title{
-    margin-top: 30px;
 }
 
 .hr-line{
@@ -267,5 +251,40 @@ h2{
 
 .bio-h4{
     color: var(--black);
-    font-size: 17px;
+    font-size: 30px;
+}
+
+.img-bio{
+    border-radius: 7%;
+    width: 90%;
+    margin-bottom:5% ;
+}
+
+@media screen and (min-width: 700px) {
+
+    .bio-h4{
+        font-size: 45px;
+    }
+    .bio-h3{
+        font-size: 35px;
+    }
+    .bio-container{
+        gap: 40px;
+    }
+    .img-bio{
+        width: 40%;
+    }
+
+}
+
+@media screen and (min-width: 780px) {
+
+    
+    .imginicio-container {
+        height: 685px;
+    }
+    .title-container{
+        font-size: 60px;
+        margin-top: -480px;
+    }
 }
