--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Cardo&family=Grey+Qo&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Italiana&display=swap');
-/* font-family: 'Grey Qo', cursive; */ 
-
+@import url("https://fonts.googleapis.com/css2?family=Cardo&family=Grey+Qo&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Italiana&display=swap");
+/* font-family: 'Grey Qo', cursive; */
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
@@ -28,263 +26,315 @@ ul {
   list-style: none;
 }
 
-.header{
-    background-color: var(--black);
-    position: sticky;
-    top: 0;
-    width: 100%;
+.header {
+  background-color: var(--black);
+  position: sticky;
+  top: 0;
+  width: 100%;
 }
 
-.logo{
-    display: inline-block;
-    color: var(--white);
-    font-size: 50px;
-    margin-left: 10px;
-    font-family: 'Grey Qo', cursive;
+.logo {
+  display: inline-block;
+  color: var(--white);
+  font-size: 50px;
+  margin-left: 10px;
+  font-family: "Grey Qo", cursive;
 }
 
-.nav{
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    background-color: var(--black);
-    overflow: hidden;
-
+.nav {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: var(--black);
+  overflow: hidden;
 }
-.menu{
-    margin-top: 20px;
-}
-
-.menu a{
-    display: block;
-    padding: 20px;
-    color: var(--white);
+.menu {
+  margin-top: 20px;
 }
 
-.menu a:hover{
-    background-color: var(--gray);
+.menu a {
+  display: block;
+  padding: 20px;
+  color: var(--white);
 }
 
-.nav{
-    max-height: 0;
-    transition: max-height .5s ease-out;
+.menu a:hover {
+  background-color: var(--gray);
 }
 
-.hamb{
-    cursor: pointer;
-    float: right;
-    padding: 30px 20px;
+.nav {
+  max-height: 0;
+  transition: max-height 0.5s ease-out;
+}
+
+.hamb {
+  cursor: pointer;
+  float: right;
+  padding: 30px 20px;
 }
 
 .hamb-line {
-    background: var(--white);
-    display: block;
-    height: 2px;
-    position: relative;
-    width: 24px;
-} 
-
-.hamb-line::before, .hamb-line::after{
-    background: var(--white);
-    content: '';
-    display: block;
-    height: 100%;
-    position: absolute;
-    transition: all .2s ease-out;
-    width: 100%;
+  background: var(--white);
+  display: block;
+  height: 2px;
+  position: relative;
+  width: 24px;
 }
 
-.hamb-line::before{
-    top: 5px;
+.hamb-line::before,
+.hamb-line::after {
+  background: var(--white);
+  content: "";
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all 0.2s ease-out;
+  width: 100%;
 }
 
-.hamb-line::after{
-    top: -5px;
+.hamb-line::before {
+  top: 5px;
+}
+
+.hamb-line::after {
+  top: -5px;
 }
 
 .side-menu {
-    display: none;
+  display: none;
 }
 
-.side-menu:checked ~ nav{
-    max-height: 350px;
+.side-menu:checked ~ nav {
+  max-height: 350px;
 }
 .side-menu:checked ~ .hamb .hamb-line {
-    background: transparent;
+  background: transparent;
 }
 .side-menu:checked ~ .hamb .hamb-line::before {
-    transform: rotate(-45deg);
-    top:0;
+  transform: rotate(-45deg);
+  top: 0;
 }
 .side-menu:checked ~ .hamb .hamb-line::after {
-    transform: rotate(45deg);
-    top:0;
+  transform: rotate(45deg);
+  top: 0;
 }
 
 @media (min-width: 768px) {
-    .nav{
-        max-height: none;
-        top: 0;
-        position: relative;
-        float: right;
-        width: fit-content;
-        background-color: transparent;
-    }
-    .menu {
-        margin-top: 0px;
-    }
-    .menu li{
-        float: left;
-    }
-    .menu a:hover{
-        background-color: transparent;
-        color: var(--gray);
+  .nav {
+    max-height: none;
+    top: 0;
+    position: relative;
+    float: right;
+    width: fit-content;
+    background-color: transparent;
+  }
+  .menu {
+    margin-top: 0px;
+  }
+  .menu li {
+    float: left;
+  }
+  .menu a:hover {
+    background-color: transparent;
+    color: var(--gray);
+  }
 
-    }
-
-    .hamb{
-        display: none;
-    }
+  .hamb {
+    display: none;
+  }
 }
 
 .main-container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .imginicio-container {
-    width: 100%;
-    height: 270px;
+  width: 100%;
+  height: 270px;
 }
 
-.imginicio{
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
+.imginicio {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
 }
 
-.title-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    margin-top: -200px;
-    color: var(--white);
-    font-size: 30px;
-    text-shadow: 0px 0px 20px black, 0px 0px 20px black;
+.title-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin-top: -200px;
+  color: var(--white);
+  font-size: 30px;
+  text-shadow: 0px 0px 20px black, 0px 0px 20px black;
 }
-.iconos{
-    color: var(--black);
-    font-size: 25px;
-    margin-top: 1px;
-}
-
-.icon-container{
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   gap: 30px;
+.iconos {
+  color: var(--black);
+  font-size: 25px;
+  margin-top: 1px;
 }
 
-.article-container{
-    display: flex;
-    width: 65%;
-    gap: 20px;
-    justify-content: center;
+.icon-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
 }
 
-.text-container{
-    display: flex;
-    flex-direction: column;
+.article-container {
+  display: flex;
+  width: 65%;
+  gap: 20px;
+  justify-content: center;
 }
 
-.text-title{
-    font-weight: bold;
-    color: var(--black);
+.text-container {
+  display: flex;
+  flex-direction: column;
 }
 
-h2{
-    text-align: center;
-    margin-bottom: 40px;
-    color: var(--black);
-  
+.text-title {
+  font-weight: bold;
+  color: var(--black);
 }
 
-
-.text-subtitle{
-    font-style: italic;
-    color: var(--gray);
+h2 {
+  text-align: center;
+  margin-bottom: 40px;
+  color: var(--black);
 }
 
-.servicio-container{
-    margin: 12px;
-    border: 1px solid black;
-    padding-bottom:30px ;
-    padding-top: 30px;
+.text-subtitle {
+  font-style: italic;
+  color: var(--gray);
 }
 
-.bio-container{
-    text-align: center;
-    align-items: center;
-    margin-top: 50px;
-    margin-left: 40px;
-    margin-right: 40px;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
+.servicio-container {
+  margin: 12px;
+  border: 1px solid black;
+  padding-bottom: 30px;
+  padding-top: 30px;
 }
 
-.hr-line{
-    width: 90px;
-    height: 3px;  
-    background-color: black
+.bio-container {
+  text-align: center;
+  align-items: center;
+  margin-top: 50px;
+  margin-left: 40px;
+  margin-right: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
-.black{
-    color:var(--black)
+.hr-line {
+  width: 90px;
+  height: 3px;
+  background-color: black;
 }
 
-.bio-h3{
-    font-size: 25px;
-    font-style: italic;
+.black {
+  color: var(--black);
 }
 
-.bio-h4{
-    color: var(--black);
-    font-size: 30px;
+.bio-h3 {
+  font-size: 25px;
+  font-style: italic;
 }
 
-.img-bio{
-    border-radius: 7%;
-    width: 90%;
-    margin-bottom:5% ;
+.bio-h4 {
+  color: var(--black);
+  font-size: 30px;
+}
+
+.img-bio {
+  border-radius: 7%;
+  width: 90%;
+  margin-bottom: 5%;
 }
 
 @media screen and (min-width: 700px) {
-
-    .bio-h4{
-        font-size: 45px;
-    }
-    .bio-h3{
-        font-size: 35px;
-    }
-    .bio-container{
-        gap: 40px;
-    }
-    .img-bio{
-        width: 40%;
-    }
-
+  .bio-h4 {
+    font-size: 45px;
+  }
+  .bio-h3 {
+    font-size: 35px;
+  }
+  .bio-container {
+    gap: 40px;
+  }
+  .img-bio {
+    width: 40%;
+  }
 }
 
 @media screen and (min-width: 780px) {
+  .imginicio-container {
+    height: 685px;
+  }
+  .title-container {
+    font-size: 60px;
+    margin-top: -480px;
+  }
+}
 
-    
-    .imginicio-container {
-        height: 685px;
-    }
-    .title-container{
-        font-size: 60px;
-        margin-top: -480px;
-    }
+.grid-gallery {
+  display: grid;
+  grid-auto-rows: 200px;
+  gap: 1rem;
+  grid-auto-flow: row dense;
+}
+
+@media all and (min-width: 320px) {
+  .grid-gallery {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media all and (min-width: 768px) {
+  .grid-gallery {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media all and (min-width: 1024px) {
+  .grid-gallery {
+    grid-template-columns: repeat(6, 1fr);
+  }
+}
+
+.grid-gallery__item:nth-child(11n + 1) {
+  grid-column: span 1;
+}
+
+.grid-gallery__item:nth-child(11n + 4) {
+  grid-column: span 2;
+  grid-row: span 1;
+}
+
+.grid-gallery__item:nth-child(11n + 6) {
+  grid-column: span 3;
+  grid-row: span 1;
+}
+
+.grid-gallery__item:nth-child(11n + 7) {
+  grid-column: span 1;
+  grid-row: span 2;
+}
+
+.grid-gallery__item:nth-child(11n + 8) {
+  grid-column: span 2;
+  grid-row: span 2;
+}
+
+.grid-gallery__item:nth-child(11n + 9) {
+  grid-row: span 1;
+}
+
+.grid-gallery__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
